MapService/k8s/deployemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-deployment
  namespace: kubernetes-dashboard
  labels:
    app: map-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-app
  template:
    metadata:
      labels:
        app: map-app
    spec:
      containers:
        - name: map-container
          image: map:1.9
          imagePullPolicy: Never  # or IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: map-service
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  selector:
    app: map-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
