MapService/k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-deployment-v1 # Changed name to include version
  namespace: test
  labels:
    app: map-app
    version: v1        # Added version label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-app
      version: v1      # Added version label
  template:
    metadata:
      labels:
        app: map-app
        version: v1    # Added version label
    spec:
      containers:
        - name: map-container
          image: map:2.0
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: map-service
  namespace: test
  labels:
    app: map-app # Make sure this label is here [prometheus]
spec:
  type: NodePort
  selector:
    app: map-app
  ports:
    - name: http-metrics  # Add this name for ServiceMonitor compatibility [prometheus]
      protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 30081
