MapService/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-deployment
  namespace: test
  labels:
    app: map-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-app
  template:
    metadata:
      labels:
        app: map-app
    spec:
      containers:
        - name: map-container
          image: map:1.0
          imagePullPolicy: Never  # or IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: map-service
  namespace: test # Added this to match the Deployment
spec:
  type: LoadBalancer
  selector:
    app: map-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 30081
