MapService/k8s/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # For testing, allows all hosts
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: map-ingress
  namespace: test
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - route:
        - destination:
            host: map-service.test.svc.cluster.local # Must match the Service name
            subset: v1
          weight: 90
        - destination:
            host: map-service.test.svc.cluster.local # Must match the Service name
            subset: v2
          weight: 10
