MapService/k8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
spec:
  ingressClassName: nginx
  rules: # Added this key
    - host: "map.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: map-service
                port:
                  number: 80
